--- a/view/passForget/passOlvidada.phtml
+++ b/view/passForget/passOlvidada.phtml
@@ -6,8 +6,7 @@ global $login_url;
 \dawfony\Ti::endExtend();
 ?>
 <body class="imagen-fondo-body" style="background-image: url('<?= $URL_PATH ?>/assets/fotosInterfaces/fondoBody.png');
-    background-repeat: repeat;
-    background-color: #fbf6f9;">
+    background-repeat: repeat;background-color: #fbf6f9;" onload="webpassOlvidadaLoad()">
 
     <div class="jumbotron">
         <header>
@@ -29,23 +28,23 @@ global $login_url;
 
                 <div style="padding-top:30px" class="panel-body">
 
-                    <form class="form-pass" action="<?= $URL_PATH ?>/restablecerPass" onsubmit="return passOlvidada()" method="POST" autocomplete="off">
+                    <form class="form-pass" action="<?= $URL_PATH ?>/restablecerPass" onsubmit="return passOlvidada(this)" method="POST" autocomplete="off">
 
                         <div style="margin-bottom: 20px" >
-                                <b>INTRODUCE TU EMAIL:</b>
-                                <input id="email" type="email" class="form-control mail-pass" name="email" placeholder="ejemplo@gmail.com" required>
+                                <b>INTRODUCE TU EMAIL:&nbsp;&nbsp;<span id="checkemail"></span></b>
+                                <input id="email" type="email" class="form-control mail-pass" name="email" placeholder="ejemplo@gmail.com" onchange="recPassEmail()" required>
                         </div>
                         <div style="margin-left:15%;" id="captcha" class="g-recaptcha" data-sitekey="6LdAh-kUAAAAADqYGx69EMC6lMotjcKGVuatjmj6"></div>
 
                         <div style="margin-bottom:20px; margin-left:30%;" class="col-sm-5 controls">
-                            <button type="submit" class="btn btn-primary  boton-confirm-tarjet pedido-btn btn-large">Enviar</button>
+                        
+                            <button type="submit" id="preboton" class="btn btn-primary boton-confirm-tarjet pedido-btn btn-large" onclick="webpassOlvidadaLoader()">Enviar</button>
                         </div>
-
                         <div class="form-group">
                             <div class="col-md-12 control">
-                                <div class="end-pass">
-                                    No tienes una cuenta! <a href="<?= $URL_PATH ?>/registro">Registrate aqu&iacute;</a>
-                                </div>
+                                <div class="end-pass"> 
+                                    No tienes una cuenta! <a href="#" onclick="location.href='<?= $URL_PATH ?>'">Registrate aqu&iacute;</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="loader6 mt-2" id="loaderpost"></span>
+                                </div>             
                             </div>
                         </div>
                     </form>
@@ -60,4 +59,4 @@ global $login_url;
     <?php \dawfony\Ti::endExtend(); ?>
 </body>
 
-</html>
+
