--- a/view/registro/registroForm.phtml
+++ b/view/registro/registroForm.phtml
@@ -3,8 +3,8 @@
 use \dawfony\Ti;
 global $URL_PATH;
 global $login_url;
-\dawfony\Ti::extend("view/cabeceras/headerView.phtml"); 
-\dawfony\Ti::endExtend(); 
+\dawfony\Ti::extend("view/cabeceras/headerView.phtml");
+\dawfony\Ti::endExtend();
 ?>
 <!-- ESTOS JS SOLO SE CARGAN AQUI, NO CAMBIARLOS DE SITIO, PARA EVITAR CONFLICTOS -->
 <script src="<?= $URL_PATH ?>/js/validacionesFormulario.js"></script>
@@ -16,7 +16,7 @@ global $login_url;
 </script>
 
 
-<body class="imagenFondoPostRegistro" onload="webcargada()">
+<body class="imagenFondoPostRegistro" onload="webFormulariocargada()">
     <!-- Hay que poner un guardado de COOKIES, que se activa si le damos al checked de guardar datos, si no una vez que cierre ventana tiene que volver a conectarse. -->
     <div class="container-fluid" id="contenidoFormulario">
         <div class="container">
@@ -175,20 +175,11 @@ global $login_url;
                                             <!--Subir foto -->
                                             <div class="container-fluid">
                                                 <div class="row">
-
-
-                                                    <!--       <input type="file" class="input-file" id="filefoto" name="foto" pattern=".*\.(jpg|jpeg|gif|png|webp|svg)">
-                                                    <label for="filefoto" class="btn btn-tertiary js-labelFile">
-                                                        <i class="icon fa fa-check"></i>
-                                                        <span class="js-fileName">Choose a file</span>
-                                                    </label>-->
                                                     <i class="file-image">
                                                         <input id="_" type="file" onchange="readImage(this)" title="" name="foto" pattern=".*\.(jpg|jpeg|gif|png|webp|svg)" />
                                                         <i class="reset" onclick="resetImage(this.previousElementSibling)"></i>
                                                         <label for="_" class="image"></label>
                                                     </i>
-
-
                                                 </div>
                                             </div>
                                         </div>
@@ -199,7 +190,7 @@ global $login_url;
                             <!-- estos que vienen del pre-regitro van ocultos hacia el post-registro-->
                             <input type="hidden" name="sex" value="<?=$sex?>" />
                             <input type="hidden" name="email" value="<?=$email?>" />
-                            
+
 
                             <div class="modal-footer d-flex justify-content-center" style="background-color:#1c2228">
                                 <button class="btn btn-unique style-font" style="color:White" onclick="window.location=href='<?= $URL_PATH ?>/'">Cancelar
@@ -208,16 +199,11 @@ global $login_url;
                                 <button class="btn btn-unique style-font" style="color:White" type="submit" id="thesubmitBoton"><i class="fas fa-paper-plane ml-1"></i>&nbsp;&nbsp;&nbsp;Enviar &nbsp;&nbsp;<span class="loader6" id="loaderpost"></span></button>
                             </div>
 
-
-
                         </div>
                     </form>
                 </div>
             </div>
         </div>
-
-
-
 
 
     </div>
