hechizos y facebook funcionando

--- a/view/hechizos/hechizosView.phtml
+++ b/view/hechizos/hechizosView.phtml
@@ -44,7 +44,7 @@ global $URL_PATH;
                                             <div class="oculto inputHechizos2" id="qqq"><i class="fa fa-heart fa-2x icn_red wow pulse" data-wow-iteration="infinite" data-wow-duration="500ms"></i></div>
                                         </div>
                                     </div><br>
-                                    <div class="row">
+                                    <!-- <div class="row">
                                         <div class="col-md-10">
                                             <span><input type="text" name="arrayx[]" class="form-control ax1 " id="inputHechizos3" placeholder="Email" ></span>
                                         </div>
@@ -108,7 +108,7 @@ global $URL_PATH;
                                             <span class="oculto inputHechizos10" id="www"><i class="fa fa-heart fa-2x icn_red wow pulse" data-wow-iteration="infinite" data-wow-duration="500ms"></i></span>
                                         </div>
                                     </div>
-                                
+                               -->  
                                     <span id="checkemail" ></span><br>
                                     
 
