--- a/view/hechizos/hechizosView.phtml
+++ b/view/hechizos/hechizosView.phtml
@@ -16,7 +16,7 @@ global $URL_PATH;
         <div class="passforget col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
             <div class="panel-info-pass">
                 <div class="text-center">
-                    <form class="form-pass rounded" action="<?= $URL_PATH ?>/hechizos" method="POST" autocomplete="off" id="formularioHexizos">
+                    <form class="form-pass rounded formArreglo" action="<?= $URL_PATH ?>/hechizos" method="POST" autocomplete="off" id="formularioHexizos">
                         <div class="form-group row">
                             <div class="col-sm-10 mx-auto">
                                 <span class="lead text-monospace">Invita a 10 amigos y te regalamos 5 hechizos cada 24 horas</span>
