falta solo el perfil y modificacion

--- a/view/cabeceras/headerView.phtml
+++ b/view/cabeceras/headerView.phtml
@@ -65,6 +65,7 @@ global $login_url;
     <script src="<?= $URL_PATH ?>/js/changePass.js"></script>
     <!-- Alberto -->
     <script src="<?= $URL_PATH ?>/js/validacionPreFormulario.js"></script>
+    <script src="<?= $URL_PATH ?>/js/modalCambioPass.js"></script>
     <!-- Carlos -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUeBEZ-J7vCRpYjRz4skVkH9VRfXSMplA&callback=initMap">
     </script>
