--- a/view/registro/registroForm.phtml
+++ b/view/registro/registroForm.phtml
@@ -24,7 +24,7 @@ global $login_url;
             <!-- ********************** formulario ******************************************* -->
             <div class="imagen-fondo2 mb-3">
                 <div class="container-fluid ">
-                    <form method="POST" action="<?= $URL_PATH?>/registro" enctype="multipart/form-data" autocomplete="off">
+                    <form class="formArreglo" method="POST" action="<?= $URL_PATH?>/registro" enctype="multipart/form-data" autocomplete="off">
                         <!--contenedor principal-->
                         <div class="container text-white " style="background-color:#1C2228;width:1400px;margin-left:-545px;opacity:0.9;">
                             <div class="row">
